--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@
             </div>
             <div class="cart-modal-footer">
                 <p>Jami: <span id="cart-total-price">0 so'm</span></p>
-                <button class="checkout-btn">Buyurtma berish</button>
+                <button class="checkout-btn"><a href="index.html">Buyurtma berish</a></button>
             </div>
         </div>
     </div>
